--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "postinstall": "husky install",
     "preview": "vite preview"
   },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "dependencies": {
+    "cz-conventional-changelog": "^3.3.0",
     "lint-staged": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
