--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.3",
+    "stylelint": "^15.6.2",
+    "stylelint-config-standard": "^33.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   },
