--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "eslint": "tsc && eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "eslint": "tsc && npx eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "eslint:fix": "npx eslint src --fix --ext .js,.ts,.jsx,.tsx",
+    "prettier": "npx prettier --write src",
+    "stylelint": "npx stylelint 'src/**/*.{css,less,scss}'",
+    "stylelint:fix": "npx stylelint --fix 'src/**/*.{css,less,scss}'",
     "postinstall": "husky install",
     "preview": "vite preview"
   },
@@ -33,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.3",
+    "prettier": "^2.8.8",
     "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0",
     "typescript": "^5.0.2",
@@ -40,6 +45,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
+      "npx prettier --write",
       "npx eslint"
     ]
   }
